--- a/main.css
+++ b/main.css
@@ -355,7 +355,9 @@ pre {
   line-height: 1.5;
   font-size: 18px;
   color: #111;
-  padding: 100px;
+  padding: 20px;
+  border-left: 100px;
+  margin: 150px;
   background-color: #ffffff;
   box-shadow: 3px 3px 0px 0px rgba(55, 101, 137, 0.04);
   border-radius: 2px;
