--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,23 @@
   <body>
     {% include header.html %}
     
+      <div class="trigger">
+        
+          
+          <a class="page-link" href="localhost:4000/about/">About</a>
+
+          <a class="page-link" href="localhost:4000/ideas/">Ideas</a>
+
+          
+          <a class="page-link" href="localhost:4000/projects/">Projects</a>
+          
+        
+      </div>
+      
     <div class="page-content">
       {{ content }}
+
+
     </div>
 
 <!--     {% include footer.html %} -->
